# Blink

./: .gitignore  Blink.icns  Blink.spec  Dockerfile  README.md  compose.yaml  launcher.py  pyproject.toml
app/: __init__.py  compat.py  config.py  main.py  models.py  paths.py  store.py  utils.py
app/services/: cancel.py  extractor.py  ffmpeg.py  jobs.py  snapshots.py  timeline.py  unifi.py  updater.py  video.py
app/static/: camera_views.js  styles.css
app/templates/: _camera_views.html  base.html  cameras.html  dashboard.html  job_detail.html  job_new.html  jobs.html  setup.html
scripts/: build_macos_app.sh
tests/: test_ffmpeg.py  test_job_ui.py  test_paths.py  test_snapshots.py  test_store.py  test_timeline.py  test_unifi.py  test_utils.py  test_video.py
