[project]
name = "blink"
version = "1.0.1"
description = "Historical UniFi Protect timelapse generator"
requires-python = ">=3.12"
dependencies = [
  "aiofiles>=24.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "importlib-resources>=6.4.0",
  "jinja2>=3.1.4",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]
macos = [
  "pyinstaller>=6.11.0",
  "pywebview>=5.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
